SafeFetch32 and SafeFetchN do not work in error handling

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b57

        SafeFetch32 and SafeFetchN could be very useful in error reporting, e.g. to print out hex dumps of potentially invalid memory locations.

        However, using them will just cause a secondary crash and a "Error during error handling" message in the error log.

        They need to be handled in the secondary signal handlers like they are handled in the primary ones.

              Assignee:
              Thomas Stuefe
              Reporter:
              Thomas Stuefe
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: