8074552: SafeFetch32 and SafeFetchN do not work in error handling

Reviewed-by: dholmes, goetz